[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Digitalt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 1 )

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 544.0
color = Color( 0.776471, 0.313726, 0.243137, 1 )

[node name="NameTop" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="LabelName" type="Label" parent="NameTop"]
margin_left = 5.0
margin_top = 440.0
margin_right = 343.0
margin_bottom = 489.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stacker for Vita"
align = 1

[node name="NameBottom" type="ColorRect" parent="."]
margin_left = 900.0
margin_right = 964.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="LabelName" type="Label" parent="NameBottom"]
margin_left = 5.0
margin_top = 440.0
margin_right = 343.0
margin_bottom = 489.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stacker for Vita"
align = 1

[node name="RectangleMenu" type="ColorRect" parent="."]
margin_left = 140.0
margin_top = 370.0
margin_right = 355.0
margin_bottom = 470.0
rect_rotation = 270.0
color = Color( 0.207843, 0.333333, 0.439216, 1 )

[node name="BlocksUP" type="Button" parent="RectangleMenu"]
margin_left = -55.0
margin_top = 20.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="Blocks" type="Label" parent="RectangleMenu"]
margin_left = 39.0
margin_right = 158.0
margin_bottom = 89.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Blocks
3"
align = 1

[node name="BlocksDOWN" type="Button" parent="RectangleMenu"]
margin_left = 215.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
text = "-"

[node name="StartGame" type="Button" parent="."]
margin_left = 496.0
margin_top = 369.0
margin_right = 714.0
margin_bottom = 438.0
rect_rotation = 270.0
custom_fonts/font = SubResource( 4 )
text = "NEW GAME"

[connection signal="pressed" from="RectangleMenu/BlocksUP" to="." method="_on_BlocksUP_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
